
Monsters
--------
* Instant petrification completely replaced with delayed petrification: you will
  always have a few turns to save yourself from instant death.
* Metallivores and disintegrators can eat through iron bars (from UnNetHack).
* Allow Demogorgon to be bribed, since his lair is now guaranteed.
* Tone back demon bribery amounts inherited from UnNetHack: demons now only ask
  for 1000 to 2000 gold; giving within 10% less (rather than 40 gold less) still
  has a chance to satisfy them.
* Tone back 1-to-1 initial monster population difficulty inherited from
  NetHack4: it is now only like that for the first 10 levels, then 1-to-2 for
  the remainder.  This gives a progression similar to that of NetHack.
* Tone back on the effect of a monster's level on its raw spell damage;
  otherwise Asmodeus cold spell-casting attack could do over twice the damage of
  Master Kaen without cold resistance, which is too much even for overprepared
  characters.
* Pets never displace the player from the stairs when entering a level.

Interface
---------
* More messages for things that used to happen silently:
    - Show message when teleported without teleport control.
    - Show message when searching finds secret doors or corridors.
    - Show messages for and reveal BUC of items that are randomly cursed by e.g.
      the Wizard of Yendor or sitting on a throne with bad luck.
    - Show a message of the identity of whistles and instruments when they are
      discovered on use.
    - Show message when pets or other monsters grow up (from SLASH'EM Extended).
* Make wearing and taking off messages more descriptive, e.g. "You finish taking
  off a +0 leather armor" instead of "You finish taking off your suit."
* Curses on armor, jewelry and eyewear are now revealed when they are worn
  instead of when trying to take them off.
* Skill training progress is now visible in the `#enhance` menu, e.g. "long